feat(rma-warranty): Added filters on service invoice page

--- a/packages/rma-frontend/src/app/stock-entry/stock-availability/stock-availability.page.html
+++ b/packages/rma-frontend/src/app/stock-entry/stock-availability/stock-availability.page.html
@@ -147,7 +147,7 @@
                 <mat-checkbox 
                   (change)=setFilter();
                   formControlName="actual_qty">
-                    Show All
+                  Show Zero Stock
                 </mat-checkbox>
               <ion-button
               color="tertiary"
