--- a/packages/rma-warranty/src/app/warranty-ui/shared-warranty-modules/service-invoices/service-invoices.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/shared-warranty-modules/service-invoices/service-invoices.component.html
@@ -9,12 +9,20 @@
         </ion-col>
         <ion-col class="ion-text-right">
           <ion-button
+          color="tertiary"
+          (click)="syncDocStatus()"
+          fill="outline"
+          [disabled]="disableRefresh"
+        >
+          Sync Data
+        </ion-button>
+          <ion-button
             *ngIf="permissionState.service_invoice.create"
             color="tertiary"
             [routerLink]="['/warranty/service-invoice', 'add', invoiceUuid]"
           >
             Add
-          </ion-button>
+          </ion-button> 
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -124,10 +132,11 @@
         <ng-container matColumnDef="submit">
           <mat-header-cell *matHeaderCellDef>Submit</mat-header-cell>
           <mat-cell *matCellDef="let row; let i = index">
-            <ion-text *ngIf="!row.docstatus" color="danger">
+            <ion-text *ngIf="row.docstatus===0" color="danger">
               Not Submitted
             </ion-text>
-            <ion-text *ngIf="row.docstatus" color="success">Submitted</ion-text>
+            <ion-text *ngIf="row.docstatus===1" color="success">Submitted</ion-text>
+            <ion-text *ngIf="row.docstatus===2" color="danger">Cancelled</ion-text>
           </mat-cell>
           <mat-footer-cell *matFooterCellDef></mat-footer-cell>
         </ng-container>
