feat(rma-warranty): Added Sync data button on warranty service invoice page...1

--- a/packages/rma-warranty/src/app/warranty-ui/shared-warranty-modules/service-invoices/service-invoices.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/shared-warranty-modules/service-invoices/service-invoices.component.html
@@ -132,11 +132,15 @@
         <ng-container matColumnDef="submit">
           <mat-header-cell *matHeaderCellDef>Submit</mat-header-cell>
           <mat-cell *matCellDef="let row; let i = index">
-            <ion-text *ngIf="row.docstatus===0" color="danger">
+            <ion-text *ngIf="row.docstatus === 0" [ngStyle]="getStatusColor('Not Submitted')">
               Not Submitted
             </ion-text>
-            <ion-text *ngIf="row.docstatus===1" color="success">Submitted</ion-text>
-            <ion-text *ngIf="row.docstatus===2" color="danger">Cancelled</ion-text>
+            <ion-text *ngIf="row.docstatus === 1" [ngStyle]="getStatusColor('Submitted')">
+              Submitted
+            </ion-text>
+            <ion-text *ngIf="row.docstatus === 2" [ngStyle]="getStatusColor('Canceled')">
+              Canceled
+            </ion-text>
           </mat-cell>
           <mat-footer-cell *matFooterCellDef></mat-footer-cell>
         </ng-container>
