--- a/packages/rma-warranty/src/app/warranty-ui/shared-warranty-modules/service-invoices/service-invoices.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/shared-warranty-modules/service-invoices/service-invoices.component.html
@@ -132,14 +132,18 @@
         <ng-container matColumnDef="submit">
           <mat-header-cell *matHeaderCellDef>Submit</mat-header-cell>
           <mat-cell *matCellDef="let row; let i = index">
-            <ion-text *ngIf="row.docstatus === 0" [ngStyle]="getStatusColor('Not Submitted')">
-              Not Submitted
-            </ion-text>
-            <ion-text *ngIf="row.docstatus === 1" [ngStyle]="getStatusColor('Submitted')">
-              Submitted
-            </ion-text>
-            <ion-text *ngIf="row.docstatus === 2" [ngStyle]="getStatusColor('Canceled')">
-              Canceled
+            <ion-text
+              [ngStyle]="{
+                color: [0, 2].includes(row.docstatus) ? 'red' : '#4d2500'
+              }"
+            >
+              {{
+                [0].includes(row.docstatus)
+                  ? 'Not Submitted'
+                  : [1].includes(row.docstatus)
+                  ? 'Submitted'
+                  : 'Canceled'
+              }}
             </ion-text>
           </mat-cell>
           <mat-footer-cell *matFooterCellDef></mat-footer-cell>
