feat(rma-warranty): Added Sync data button on warranty service invoice page...4

--- a/packages/rma-warranty/src/app/warranty-ui/shared-warranty-modules/service-invoices/service-invoices.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/shared-warranty-modules/service-invoices/service-invoices.component.html
@@ -134,15 +134,12 @@
           <mat-cell *matCellDef="let row; let i = index">
             <ion-text
               [ngStyle]="{
-                color: [0, 2].includes(row.docstatus) ? 'red' : '#4d2500'
+                color: row.docstatus === 1 ? '#4d2500' : 'red'
               }"
             >
               {{
-                [0].includes(row.docstatus)
-                  ? 'Not Submitted'
-                  : [1].includes(row.docstatus)
-                  ? 'Submitted'
-                  : 'Canceled'
+                row.docstatus === 0 ? 'Not Submitted' : 
+                row.docstatus === 1 ? 'Submitted' : 'Canceled'
               }}
             </ion-text>
           </mat-cell>
