feat(rma-warranty):Added Bulk Print & Modified Print Flow

--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -251,7 +251,7 @@
             <ion-col class="ion-text-left" *ngIf="route ==='edit'">
               <ion-button
                 color="tertiary"
-                *ngIf="warrantyObject?.category === 'Bulk'"
+                *ngIf="warrantyObject?.set === 'Bulk'"
                 (click)="appendProduct()"
               >
                 Add
