--- a/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.html
@@ -18,7 +18,7 @@
         <ion-button
           color="tertiary"
           [disabled]="!dataSource.length"
-          (click)="comingSoon('Print Feature is coming Soon...')"
+          (click)="openDialog()"
         >
           Print
         </ion-button>
