fix(rma-warranty):customer name fix in serail history page

--- a/packages/rma-warranty/src/app/serial-ui/serial-search/serial-search.page.html
+++ b/packages/rma-warranty/src/app/serial-ui/serial-search/serial-search.page.html
@@ -174,10 +174,10 @@
 
         <ng-container matColumnDef="customer">
           <mat-header-cell *matHeaderCellDef mat-sort-header="customer">
-            Customer
+            Customer 
           </mat-header-cell>
           <mat-cell *matCellDef="let row">
-            {{row.customer}}
+            {{row.customer_name}}
           </mat-cell>
           <mat-footer-cell *matFooterCellDef></mat-footer-cell>
         </ng-container>
