feat(rma-warranty):Bulk Claim and Print modifications

--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -428,7 +428,7 @@
         </ion-grid>
       </ion-card-content>
     </ion-card>
-    <ion-card *ngIf="route ==='add'">
+    <ion-card>
       <ion-card-header>
         <ion-card-title color="tertiary"> Company Details </ion-card-title>
       </ion-card-header>
