--- a/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.scss
+++ b/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.scss
@@ -28,3 +28,18 @@ mat-header-cell {
   flex: 0 0 3% !important;
   min-width: 10px !important;
 }
+
+
+
+ion-card.example-element-detail{
+  width: fit-content;
+}
+
+.cards{
+  float: left;
+}
+
+tr.example-detail-row {
+  height: 0;
+}
+
