feat(rma-warranty):Modified Bulk Claim

--- a/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.scss
+++ b/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.scss
@@ -32,7 +32,11 @@ mat-header-cell {
 
 
 ion-card.example-element-detail{
-  width: fit-content;
+  width: max-content;
+}
+
+ion-row.rowDetail{
+  width: max-content;
 }
 
 .cards{
