feat(rma-warranty):Updated  Claim filters, Validation in Claim and Stock Creation Flow

--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -253,6 +253,7 @@
                 color="tertiary"
                 *ngIf="warrantyObject?.set === 'Bulk'"
                 (click)="appendProduct()"
+                [disabled]="warrantyClaimForm.invalid"
               >
                 Add
               </ion-button>
@@ -262,6 +263,7 @@
                 color="tertiary"
                 *ngIf="f.category.value === 'Bulk'"
                 (click)="appendProduct()"
+                [disabled]="warrantyClaimForm.invalid"
               >
                 Add
               </ion-button>
