--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/print/print.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/print/print.component.html
@@ -8,6 +8,12 @@
 </ion-item>
 <ion-item
   lines="none"
+  (click)="modifyMRPPrint()"
+>
+  <ion-label>MRP Sales Invoice</ion-label>
+</ion-item>
+<ion-item
+  lines="none"
   disabled="{{ printDeliveryNoteURL === '' ? true : false }}"
   (click)="printDeliveryNote()"
 >
