--- a/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.html
@@ -8,6 +8,7 @@
       </ion-col>
       <ion-col class="ion-text-right">
         <ion-button
+        *ngIf="permissionState.warranty_claim.update"
           color="tertiary"
           [disabled]="!dataSource.length"
           fill="outline"
@@ -16,6 +17,7 @@
           Edit
         </ion-button>
         <ion-button
+        *ngIf="permissionState.warranty_claim.read"
           color="tertiary"
           [disabled]="!dataSource.length"
           (click)="openDialog()"
