fix(rma-warranty):Modification of Claim Creation page

--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -293,9 +293,19 @@
               *ngFor="let column of displayedColumns"
             >
               <mat-header-cell *matHeaderCellDef>{{column}}</mat-header-cell>
-              <mat-cell *matCellDef="let row">
-                <ng-container *ngIf="row[column]">
+              <mat-cell *matCellDef="let row;let i=index">
+                <ng-container *ngIf="row[column] && column!='remove'">
                   {{ row[column] }}
+                </ng-container>
+                <ng-container *ngIf=" column==='remove'">
+                  <ion-button
+                    fill="clear"
+                    class="ion-no-padding"
+                    color="danger"
+                    (click)="removeRow(row,i)"
+                  >
+                    <ion-icon slot="icon-only" name="trash"></ion-icon>
+                  </ion-button>
                 </ng-container>
               </mat-cell>
               <mat-footer-cell *matFooterCellDef></mat-footer-cell>
@@ -328,7 +338,7 @@
       </ion-card-header>
       <ion-card-content>
         <ion-grid class="i-no-padding">
-          <ion-row class="align">
+          <ion-row class="align">     
             <ion-col *ngIf="warrantyState?.customer_name?.active">
               <mat-form-field class="example-full-width">
                 <input
@@ -336,6 +346,7 @@
                   placeholder="Select Customer"
                   matInput
                   formControlName="customer_name"
+                  (focusout)="validateInput(f.customer_name, filteredCustomerList)"
                   [matAutocomplete]="auto"
                 />
                 <mat-autocomplete
@@ -352,8 +363,9 @@
                     <small class="text-muted"> {{ option.name}} </small>
                   </mat-option>
                 </mat-autocomplete>
-                <mat-error *ngIf="f.customer_name.hasError('required')">
-                  Customer is <strong>required</strong>
+                <mat-error *ngIf="f.customer_name.hasError('falseValse')">
+                  You should select a value from dropdown only. 
+                  <strong>'{{f.customer_name.value}}'</strong> is not allowed.
                 </mat-error>
               </mat-form-field>
             </ion-col>
